--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
   "semi": false,
   "singleQuote": true,
   "printWidth": 100,
+  "vueIndentScriptAndStyle": true,
   "plugins": ["prettier-plugin-organize-imports"]
 }
